added feature: add question

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,8 +6,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content">
-        <h1>Welcome to Test Paper Generator</h1>
-        <p>This is your dashboard. Start creating test papers here!</p>
+        <router-outlet></router-outlet>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
