--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
   <a mat-list-item routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-  <a mat-list-item>Add Class</a>
-  <a mat-list-item>Add Question</a>
-  <a mat-list-item>Create Test Paper</a>
-  <a mat-list-item>more...</a>
+  <a mat-list-item routerLink="/dashboard/add-question" routerLinkActive="active">Add Question</a>
+  <a mat-list-item>Create Test</a>
+  <a mat-list-item>Manage Papers</a>
+  <a mat-list-item>Settings</a>
 </mat-nav-list>
