--- a/src/app/dashboard/view-tests/view-tests.component.html
+++ b/src/app/dashboard/view-tests/view-tests.component.html
@@ -47,9 +47,27 @@
       <mat-cell *matCellDef="let test">
         <ul class="distribution-list">
           <li *ngFor="let dist of test.distributions">
-            {{ dist.type }}: {{ dist.count }} questions, {{ dist.marksPerQuestion }} marks each
+            {{ dist.type }}: {{ dist.count }} X {{ dist.marksPerQuestion }}
           </li>
         </ul>
+      </mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+      <mat-cell *matCellDef="let test">
+        <button mat-icon-button color="primary" (click)="editTestPaper(test)" title="Edit">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="accent" (click)="viewTestPaper(test)" title="View">
+          <mat-icon>visibility</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="deleteTestPaper(test)" title="Delete">
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-icon-button (click)="exportToPdf(test)" title="Export to PDF">
+          <mat-icon>picture_as_pdf</mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
 
