--- a/src/app/dashboard/view-tests/view-tests.component.scss
+++ b/src/app/dashboard/view-tests/view-tests.component.scss
@@ -57,6 +57,17 @@ mat-table {
     li {
       font-size: 12px;
       line-height: 1.4;
+      color: #555;
+      margin-bottom: 5px;
+    }
+  }
+
+  .mat-column-actions {
+    text-align: right;
+    min-width: 150px;
+
+    button {
+      margin-left: 5px;
     }
   }
 }
@@ -75,6 +86,15 @@ mat-table {
   .distribution-list {
     li {
       font-size: 10px;
+      margin-bottom: 4px;
+    }
+  }
+
+  .mat-column-actions {
+    min-width: 120px;
+
+    button {
+      margin-left: 2px;
     }
   }
 }
