delete/ edit feature added for question

--- a/src/app/dashboard/view-questions/view-questions.component.html
+++ b/src/app/dashboard/view-questions/view-questions.component.html
@@ -42,6 +42,18 @@
       <mat-cell *matCellDef="let question">{{ question.marks }}</mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+      <mat-cell *matCellDef="let question">
+        <button mat-icon-button color="primary" (click)="openEditDialog(question)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="deleteQuestion(question.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
