--- a/src/app/dashboard/view-tests/view-tests.component.html
+++ b/src/app/dashboard/view-tests/view-tests.component.html
@@ -65,7 +65,7 @@
         <button mat-icon-button color="warn" (click)="deleteTestPaper(test)" title="Delete">
           <mat-icon>delete</mat-icon>
         </button>
-        <button mat-icon-button (click)="exportToPdf(test)" title="Export to PDF">
+        <button mat-icon-button color="warn" (click)="exportToPdf(test)" title="Export to PDF">
           <mat-icon>picture_as_pdf</mat-icon>
         </button>
       </mat-cell>
